test/files/pos/t1737/B.java
public abstract class B implements A {}