test/files/neg/t8700b/Foo_1.java
public enum Foo_1 {
    A,
    B
}
